--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"type": "module",
 	"dependencies": {
 		"algebrite": "^1.4.0",
+		"axios": "^1.7.7",
 		"chart.js": "^4.4.4",
 		"katex": "^0.16.11",
 		"mathjs": "^13.1.1",
